# NovaPx

./: .gitignore  CMakeLists.txt  README.md  pulldeps.bat  todo.txt
include/iris/: general.hh  interpolation.hh  mat3.hh  mat4.hh  quaternion.hh  shapes.hh  vec2.hh  vec3.hh  vec4.hh
package/: assemble.sh
src/: main.cc
src/assets/: meshes.hh  shaders.hh
src/graphics/: camera.hh  color.cc  color.hh  fbo.cc  fbo.hh  filter.hh  gl.cc  gl.hh  glWidget.cc  glWidget.hh  image.cc  image.hh  mesh.cc  mesh.hh  png.cc  png.hh  renderer.cc  renderer.hh  shader.cc  shader.hh  texture.cc  texture.hh
src/info/: globals.hh
src/io/: io.cc
src/util/: def.hh  event.hh  globals.cc  globals.hh  gui.cc  gui.hh  input.cc  input.hh  instances.cc  instances.hh  io.cc  io.hh  threadPool.cc  threadPool.hh  tools.hh  util.cc  util.hh  widget.cc  widget.hh  window.cc  window.hh
src/widgets/: brushToolButton.cc  brushToolButton.hh  eraserToolButton.cc  eraserToolButton.hh  eyedropperToolButton.cc  eyedropperToolButton.hh  fillToolButton.cc  fillToolButton.hh  glWidget.cc  glWidget.hh  mainWindowWidget.cc  mainWindowWidget.hh  pickColorButton.cc  pickColorButton.hh  workspaceWidget.cc  workspaceWidget.hh
